k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get200-frontend
  namespace: get200 # Standardized to backend's namespace
  labels:
    app: get200-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: get200-frontend
  template:
    metadata:
      labels:
        app: get200-frontend
    spec:
      serviceAccountName: frontend-ksa
      containers:
        - name: get200-frontend
          image: asia-south1-docker.pkg.dev/project-2505dfd6-33dd-47f2-ab6/get200-app-api-repo/frontend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 15
