k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: get200-ingress
  namespace: get200
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "get200-web-ip"
    networking.gke.io/managed-certificates: "frontend-cert"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: get200.qd.je # Frontend routing
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
